# iceberg-query-engine

./: .gitignore  AGENT_COORDINATION.md  ARCHITECTURAL_OVERHAUL.md  CLAUDE.md  Cargo.toml  DEVELOPMENT_STATUS.md  IMPROVEMENT_SUGGESTIONS.md  README.md  ROADMAP.md  architecture-first-insights.html  benchmark_compare.py  benchmark_results.md  benchmark_vs_duckdb.py
.claude/commands/: sync-engine.md
.claude/plans/: ROADMAP.md  arch-first-agent-design.md  benchmark-harness-adr.md  larger-than-memory-support.md  performance-optimization-plan.md  predicate-reordering-design.md  subquery-decorrelation-plan.md  trino-function-implementation.md
.claude/research/: join-reordering-bug-fix.md  table-alias-schema-fix.md
.github/workflows/: ci.yml
benches/: tpch.rs
branching-metastore/: CREATE_METASTORE_PROMPT.md  pom.xml
branching-metastore/branching-metastore-client/: pom.xml
branching-metastore/branching-metastore-common/: pom.xml
branching-metastore/branching-metastore-server/: pom.xml
examples/: async_q1.rs  bulk_q1.rs  debug_decorrelation.rs  final_q1.rs  iceberg_benchmark.rs  morsel_test.rs  morsel_test_fast.rs  morsel_test_projected.rs  morsel_test_vectorized.rs  optimized_q1.rs  row_count_test.rs  run_q21.rs  simd_q1.rs  test_optimized_plan.rs  vectorized_q1.rs  worksteal_q1.rs
mcp-app/: README.md  package-lock.json  package.json  tsconfig.json
mcp-app/src/: server.ts
scripts/: PERFORMANCE_ROADMAP.md  benchmark_compare.sh  benchmark_mini.sh  benchmark_subquery_queries.sh  generate_expected_results.py  install-deps.sh  safe_benchmark.sh
src/: error.rs  lib.rs  main.rs
src/arrow_ffi/: array.rs  codec.rs  export.rs  import.rs  mod.rs
src/cli/: helper.rs  mod.rs  output.rs
src/execution/: context.rs  memory.rs  mod.rs
src/metastore/: mod.rs
src/optimizer/: cost.rs  mod.rs
src/parser/: ast.rs  mod.rs
src/physical/: mod.rs  morsel.rs  morsel_agg.rs  plan.rs  planner.rs  (+1 more)
tests/: cli_tests.rs  duckdb_validated.rs  function_tests.rs  function_validation_tests.rs  sql_comprehensive.rs  subquery_test.rs  tpch_queries.rs
(+218 files in other folders)
